2018.11/_sources/plugins/available/diversity/beta-phylogenetic.txt
beta-phylogenetic: Beta diversity (phylogenetic)
================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: diversity:beta-phylogenetic.bib
   :all:
   :keyprefix: diversity:beta-phylogenetic:
   :labelprefix: diversity:beta-phylogenetic:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime diversity beta-phylogenetic [OPTIONS]

     Computes a user-specified phylogenetic beta diversity metric for all pairs
     of samples in a feature table.

   Options:
     --i-table ARTIFACT PATH FeatureTable[Frequency]
                                     The feature table containing the samples
                                     over which beta diversity should be
                                     computed.  [required]
     --i-phylogeny ARTIFACT PATH Phylogeny[Rooted]
                                     Phylogenetic tree containing tip identifiers
                                     that correspond to the feature identifiers
                                     in the table. This tree can contain tip ids
                                     that are not present in the table, but all
                                     feature ids in the table must be present in
                                     this tree.  [required]
     --p-metric [unweighted_unifrac|weighted_normalized_unifrac|generalized_unifrac|weighted_unifrac]
                                     The beta diversity metric to be computed.
                                     [required]
     --p-n-jobs INTEGER              The number of workers to use.  [default: 1]
     --p-variance-adjusted / --p-no-variance-adjusted
                                     Perform variance adjustment based on Chang
                                     et al. BMC Bioinformatics 2011. Weights
                                     distances based on the proportion of the
                                     relative abundance represented between the
                                     samples at a given node under evaluation.
                                     [default: False]
     --p-alpha FLOAT                 This parameter is only used when the choice
                                     of metric is generalized_unifrac. The value
                                     of alpha controls importance of sample
                                     proportions. 1.0 is weighted normalized
                                     UniFrac. 0.0 is close to unweighted UniFrac,
                                     but only if the sample proportions are
                                     dichotomized.  [optional]
     --p-bypass-tips / --p-no-bypass-tips
                                     In a bifurcating tree, the tips make up
                                     about 50% of the nodes in a tree. By
                                     ignoring them, specificity can be traded for
                                     reduced compute time. This has the effect of
                                     collapsing the phylogeny, and is analogous
                                     (in concept) to moving from 99% to 97% OTUs
                                     [default: False]
     --o-distance-matrix ARTIFACT PATH DistanceMatrix % Properties(['phylogenetic'])
                                     The resulting distance matrix.  [required if
                                     not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config FILE               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.diversity.methods import beta_phylogenetic

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Beta diversity (phylogenetic)

   Computes a user-specified phylogenetic beta diversity metric for all pairs
   of samples in a feature table.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table containing the samples over which beta diversity
       should be computed.
   phylogeny : Phylogeny[Rooted]
       Phylogenetic tree containing tip identifiers that correspond to the
       feature identifiers in the table. This tree can contain tip ids that
       are not present in the table, but all feature ids in the table must be
       present in this tree.
   metric : Str % Choices({'generalized_unifrac', 'unweighted_unifrac', 'weighted_normalized_unifrac', 'weighted_unifrac'})
       The beta diversity metric to be computed.
   n_jobs : Int, optional
       The number of workers to use.
   variance_adjusted : Bool, optional
       Perform variance adjustment based on Chang et al. BMC Bioinformatics
       2011. Weights distances based on the proportion of the relative
       abundance represented between the samples at a given node under
       evaluation.
   alpha : Float % Range(0, 1, inclusive_end=True), optional
       This parameter is only used when the choice of metric is
       generalized_unifrac. The value of alpha controls importance of sample
       proportions. 1.0 is weighted normalized UniFrac. 0.0 is close to
       unweighted UniFrac, but only if the sample proportions are
       dichotomized.
   bypass_tips : Bool, optional
       In a bifurcating tree, the tips make up about 50% of the nodes in a
       tree. By ignoring them, specificity can be traded for reduced compute
       time. This has the effect of collapsing the phylogeny, and is analogous
       (in concept) to moving from 99% to 97% OTUs

   Returns
   -------
   distance_matrix : DistanceMatrix % Properties(['phylogenetic'])
       The resulting distance matrix.</pre>
       </div>
     </div>
   </div>